Add env to gitignore

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=NzExMTgzMzgwNzcwNzE3NzE3.Xr_Vxg.b6pg0kPzrMLAjnQEBHWD3WdnG5c
+BOT_TOKEN=NzExMTgzMzgwNzcwNzE3NzE3.Xr_aZg.hJq1dB-6JJPu_qrfpxmBZWIDQck
 PREFIX=!
